# btc

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Spilla_template.psd  armaClasses.cpp  armaClasses.h  armaFunctions.cpp  armaFunctions.h  btc_ArmaToJSON.sln  btc_ArmaToJSON.vcxproj  btc_ArmaToJSON.vcxproj.filters  dllmain.cpp  dllmain.h  logo.paa  logo.psd  main.cpp  mod.cpp  pch.h  script_mod.hpp
addons/AIPaths/: $PBOPREFIX$.txt  XEH_PREP.hpp  config.cpp  logo.psd  script_component.hpp
addons/AIPaths/exports/: 2x2.max  2x2_45.max  2x4.max  2x4_45.max  2x4_90deg.max  4x2_45.max  4x4.max  4x4_45.max  4x6.max  4x8_45.max  6x4_45.max  6x6.max  entryfan.max  wall_4x1.max  wall_4x2.max  wall_6x1.max  wall_6x2.max
addons/AIPaths/functions/: fnc_hideObject.sqf  fnc_unhideObjects.sqf
addons/AIPaths/keys/: model.cfg
addons/AIPaths/materials/: altdev_generic.psd  altdev_generic2x4.psd  btc_AIPaths_dev_floor_CA.paa  btc_AIPaths_iconAIObject_CA.paa  dev_2x2.paa  dev_2x4.paa  dev_4x2.paa  dev_4x4.paa  dev_4x6.paa  dev_512.psd  dev_6x4.paa  dev_6x6.paa  dev_floor.paa  dev_generic.paa  dev_wall.paa  iconAIObject_ca.psd
addons/AIPaths/models/: AIPath_2x2.p3d  AIPath_2x2_45.p3d  AIPath_2x4.p3d  AIPath_2x4_45.p3d  AIPath_4x2_45.p3d  AIPath_4x4.p3d  AIPath_4x4_45.p3d  AIPath_4x6.p3d  AIPath_6x4_45.p3d  AIPath_6x6.p3d  AIPath_Roadway_2x2.p3d  AIPath_Roadway_2x2_45.p3d  (+33 more)
addons/KAM_fak/: $PBOPREFIX$.txt  CfgFunctions.hpp  CfgMagazines.hpp  CfgVehicles.hpp  CfgWeapons.hpp  XEH_postInit.sqf  XEH_preInit.sqf  config.cpp  script_component.hpp  stringtable.xml
addons/aipaths/: $PBOPREFIX$.txt  config.cpp  script_component.hpp  stringtable.xml
addons/btc_insignia/: $PBOPREFIX$.txt  btc_logo.paa
addons/btc_serverLogger/: CMakeLists.txt  CMakePresets.json
addons/btc_trench/: $PBOPREFIX$.txt
addons/c4booby/: $PBOPREFIX$.txt  XEH_PREP.hpp  config.cpp  script_component.hpp
addons/canteen/: $PBOPREFIX$.txt  XEH_PREP.hpp  XEH_preInit.sqf  XEH_preStart.sqf  config.cpp  script_component.hpp
addons/civil_orders/: $PBOPREFIX$.txt  config.cpp  script_component.hpp
addons/deployable_antenna/: $PBOPREFIX$.txt  XEH_PREP.hpp  config.cpp  script_component.hpp
addons/dlcbypass/: $PBOPREFIX$.txt  XEH_PREP.hpp  XEH_preStart.sqf  config.cpp  script_component.hpp
addons/ext_ArmaToJSON/: CMakeLists.txt  CMakePresets.json
addons/ext_ArmaToJSON/include/: armaDataFunctions.hpp  armaFileFunctions.h  armaFileFunctions.hpp  dllmain.h  dllmain.hpp  pch.h
addons/ext_ArmaToJSON/src/: armaDataFunctions.cpp  armaDataFunctions.cxx  armaFileFunctions.cpp  armaFileFunctions.cxx  dllmain.cpp  dllmain.cxx  dllmain.def
addons/ext_serverLogger/: CMakeLists.txt  CMakePresets.json  README.md
addons/ext_serverLogger/include/: armaLogData.h  armaLogFncs.h  coutToDebug.h  dllmain.h
addons/ext_serverLogger/src/: armaLogData.cxx  armaLogFncs.cxx  dllmain.cxx  dllmain.def
addons/ifa_pak40base_fix/: $PBOPREFIX$.txt  config.cpp  script_component.hpp
addons/insignia/: $PBOPREFIX$.txt  config.cpp  mod.cpp  script_component.hpp
addons/main/: $PBOPREFIX$.txt  config.cpp  script_macros.hpp
addons/money/: $PBOPREFIX$.txt  config.cpp  script_component.hpp
addons/playerDCrecovery/: $PBOPREFIX$.txt  config.cpp  script_component.hpp
addons/serverLogger/: $PBOPREFIX$.txt  XEH_PREP.hpp  XEH_preInit.sqf  config.cpp  script_component.hpp  stringtable.xml
addons/tfar_vest_radios/: $PBOPREFIX$.txt  config.cpp
addons/trench/: config.cpp
addons/weight_calculator/: $PBOPREFIX$.txt  XEH_PREP.hpp  config.cpp  rsc.hpp  script_component.hpp
include/: armaClasses.h  armaDataFunctions.h  armaFileFunctions.h  armaFunctions.h  dllmain.h  pch.h
src/: armaClasses.cxx  armaFileFunctions.cxx  armaFunctions.cxx  dllmain.cxx  dllmain.def
(+151 files in other folders)
